# Fitorio

./: pyproject.toml
fitorio/: constants.py  main.py
